# crackle

./: .gitignore  Cargo.toml  License  README.md  game_results.txt  logs.txt  parser_flow.md  todo.md  words.txt
.github/workflows/: release.yml  test.yml
docker/: Dockerfile.linux-x64  Dockerfile.windows-x64  Dockerfile.windows-x86
scripts/: build-all.sh
src/: arena.rs  config.rs  constants.rs  database.rs  error.rs  filter_logic.rs  game_engine.rs  game_loop.rs  lib.rs  logs.rs  main.rs  session.rs  setup.rs  shared_state.rs  word_analyzer.rs  word_parser.rs
src/input/: api.rs  interactive.rs  mod.rs  test.rs
src/output/: api.rs  interactive.rs  mod.rs  test.rs
