[package]
name = "crackle"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Brent Harrington  <brentdev@icloud.com>"]
description = "A probabilistic Wordle solver using database-driven word filtering"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0"
dotenv = "0.15.0"
rand = "0.8.5"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
toml ="0.8"
dirs = "5.0"
