[package]
name = "crackle"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Brent Harrington  <Ghostvox@icloud.com>"]
description = "A probabilistic Wordle solver using database-driven word filtering"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0"
dotenv = "0.15.0"
rand = "0.8.5"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
toml ="0.8"
dirs = "5.0"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
colored = "3.0.0"
